2008-06-02 Denis Ovsienko

	* connected.c: (connected_up_ipv4, connected_down_ipv4,
	  connected_up_ipv6, connected_down_ipv6): don't call
	  work_queue_aim_head()
	* rib.h: adjust RIB_ROUTE_QUEUED macro for meta_queue,
	  declare meta_queue structure
	* zebra_rib.c: (process_subq, meta_queue_process, rib_meta_queue_add,
	  meta_queue_new) new functions; (rib_queue_add) don't try checking
	  RIB_QUEUE_ADDED flag, rib_meta_queue_add() does it better, take care
	  of the meta queue instead; (rib_queue_init) initialize the meta queue
	  as well; (rib_lookup_and_pushup) don't call work_queue_aim_head();
	  (rib_process) only do actual processing, don't do deallocation;
	* zserv.h: include meta_queue field into zebra_t structure

2008-05-29 Stephen Hemminger <stephen.hemminger@vyatta.com>

	* rt_netlink.c: (netlink_install_filter) BPF filter to catch and
	  drop responses to zebra's own route messages.
	  (kernel_init) add BPF filter on the netlink socket.

2008-02-26 Denis Ovsienko
	* zebra_rib.[ch]: (rib_lookup_and_pushup) New function, which makes sure,
	  that if_set_prefix() has nothing in its way of assigning an address.
	* ioctl.c: (if_set_prefix) Use rib_lookup_and_pushup() to resolve
	  bug #326.

2008-01-11 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* ioctl.c: If HAVE_BSD_LINK_DETECT is defined, include <net/if_media.h>
	  (if_get_flags) Remove debug messages about BSD link state.
	* kernel_socket.c: (bsd_linkdetect_translate) If link state
	  is unknown, we should set the IFF_RUNNING flag.

2008-01-10 Ingo Flaschberger <if@xip.at>

	* ioctl.c: (if_get_flags) If HAVE_BSD_LINK_DETECT, use the SIOCGIFMEDIA
	  ioctl to ascertain link state.
	* kernel_socket.c: (bsd_linkdetect_translate) New function to
	  map the ifm_data.ifi_link_state value into the IFF_RUNNING flag.
	  (ifm_read) Call bsd_linkdetect_translate to fix the IFF_RUNNING
	  flag before calling if_flags_update.

2008-01-08 Michael Larson <mike@vyatta.com>
